采用vcpkg构建rocksdb，并且使用FFM使用rocksdb